Pattern Library: Fix pagination button on mobile (#89106)

--- a/client/my-sites/patterns/components/pattern-gallery/style.scss
+++ b/client/my-sites/patterns/components/pattern-gallery/style.scss
@@ -34,7 +34,7 @@
 	}
 
 	.pattern-gallery__pagination-button-wrapper {
-		grid-column: span 3;
+		grid-column: 1 / -1;
 		padding-top: 40px;
 	}
 }
